[gd_scene load_steps=38 format=3 uid="uid://d0abd2ldwcvao"]

[ext_resource type="AudioStream" uid="uid://bp1qyx5lonn64" path="res://Assets/Music/Part03.ogg" id="1"]
[ext_resource type="AudioStream" uid="uid://bypw1txaqccsb" path="res://Assets/Sounds/Phone02.wav" id="2"]
[ext_resource type="PackedScene" uid="uid://nweo4xgyehm3" path="res://Scenes/Part03/Part03_EndPlatform.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Scenes/Part03/Part03_RemovableLine.tscn" id="4"]
[ext_resource type="Script" path="res://Scenes/Part03/Part03.gd" id="5"]
[ext_resource type="PackedScene" path="res://Scenes/Part03/Part03_MovingEye.tscn" id="6"]
[ext_resource type="TileSet" path="res://Resources/TileSets/WhiteLines.tres" id="7"]
[ext_resource type="PackedScene" path="res://Scenes/Part03/Part03_Boss.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://dx8bkufwvfn8x" path="res://Game/BaseScene.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://6n4mwtpv5qbb" path="res://Scenes/Part03/Part03_EndTube.tscn" id="10"]
[ext_resource type="PackedScene" path="res://Prefabs/MusicMixer.tscn" id="11"]
[ext_resource type="Texture2D" uid="uid://7x4v45flbofn" path="res://Assets/Environmnent/Light01.png" id="12"]
[ext_resource type="AudioStream" uid="uid://erv5cw7m858" path="res://Assets/Sounds/Wind00.ogg" id="13"]
[ext_resource type="PackedScene" path="res://Prefabs/BackgroundRect.tscn" id="14"]
[ext_resource type="Texture2D" uid="uid://dmeo20bn4ykvd" path="res://Assets/Environmnent/Decoration/Graffiti40.png" id="15"]
[ext_resource type="PackedScene" path="res://Scenes/Part03/Part03_Ghost.tscn" id="16"]
[ext_resource type="Texture2D" uid="uid://miqae1gwckny" path="res://Assets/Environmnent/Lines00_H00_Thin.png" id="17"]
[ext_resource type="Environment" uid="uid://dok0wscd8grfe" path="res://Resources/HighPerformanceEnvironment.tres" id="18"]
[ext_resource type="Script" path="res://Scenes/Part03/Part03_TileMap.gd" id="19"]
[ext_resource type="Script" path="res://Prefabs/Gamma.gd" id="20"]
[ext_resource type="PackedScene" uid="uid://dot0bpyssv6a2" path="res://Game/GameCamera.tscn" id="23"]
[ext_resource type="PackedScene" uid="uid://bp7geqsl8sb4k" path="res://Scenes/Part03/Part03_TopIsland.tscn" id="26"]
[ext_resource type="PackedScene" uid="uid://b668oxoccikke" path="res://Game/Player.tscn" id="28"]
[ext_resource type="AudioStream" uid="uid://pnwk6hgo0imn" path="res://Assets/Sounds/Warning02.wav" id="39"]
[ext_resource type="PackedScene" path="res://Prefabs/Effect/ScreenEffect_CRT.tscn" id="43"]
[ext_resource type="PackedScene" uid="uid://df80o4owfkqn1" path="res://Scenes/Part03/Part03_Pillars.tscn" id="44"]
[ext_resource type="PackedScene" path="res://Prefabs/Loop.tscn" id="45"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(13229, 2249)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(57.4233, 1323.41)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(107.271, 1772.33)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(1377.92, 30.0264)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(61.4194, 1726.79)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(14542, 615.28)

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(620.89, 287.97)

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(624.854, 195.886)

[sub_resource type="RectangleShape2D" id="9"]
size = Vector2(618.003, 99.7715)

[sub_resource type="RectangleShape2D" id="10"]
size = Vector2(108.73, 382.711)

[node name="Part03" type="Node2D"]
position = Vector2(59.2303, 0.734743)

[node name="BaseScene" parent="." instance=ExtResource("9")]
script = ExtResource("5")
teleport_player_to_end = false
delay = 1.0
auto_fade_out = false
auto_show_cursor = false

[node name="CursorDisplay" parent="BaseScene" index="4"]
position = Vector2(0, -5316.54)

[node name="Player" parent="BaseScene" instance=ExtResource("28")]
position = Vector2(-4420.53, -8417.55)
avatar_max_speed = 1000.0
avatar_acceleration = 2000.0

[node name="Boss" parent="BaseScene" instance=ExtResource("8")]
position = Vector2(-2187.31, -253.884)
scale = Vector2(0.499999, 0.499999)
navigation_node = NodePath("../Environment/Maze/Navigation")
target_node = NodePath("../Player")

[node name="Ghost" parent="BaseScene" instance=ExtResource("16")]
z_index = 1
position = Vector2(1186.34, 29474.4)
rotation = 3.10669
scale = Vector2(1, -1)
player_node = NodePath("../Player")
origo_node = NodePath("Origo")

[node name="Origo" type="Node2D" parent="BaseScene/Ghost"]
position = Vector2(-1787.16, -18.3966)

[node name="DebugCamera" parent="BaseScene" instance=ExtResource("23")]
visible = false
position = Vector2(4046.12, 15566.4)
scale = Vector2(0.7, 0.7)
zoom = Vector2(0.025, 0.025)

[node name="GameCamera" parent="BaseScene" instance=ExtResource("23")]
position = Vector2(-3412.59, -8417.55)
scale = Vector2(0.7, 0.7)
zoom = Vector2(0.2, 0.2)
follow_node = NodePath("../Player")
follow_init_offset = Vector2(0, -600)
follow_offset = Vector2(0, -600)
follow_speed = Vector2(2000, 2000)

[node name="DebugLine" type="Line2D" parent="BaseScene"]
visible = false
z_index = 100
z_as_relative = false
position = Vector2(-7.62939e-05, 0.000608563)

[node name="Darkness" type="CanvasModulate" parent="BaseScene" groups=["auto_visible"]]
visible = false
light_mask = 0
position = Vector2(0, -5316.54)
color = Color(0.627451, 0.627451, 0.627451, 1)
script = ExtResource("20")

[node name="WorldEnvironment" type="WorldEnvironment" parent="BaseScene" groups=["world_environment"]]
environment = ExtResource("18")

[node name="BackgroundRect" parent="BaseScene" instance=ExtResource("14")]

[node name="ColorRect" parent="BaseScene/BackgroundRect" index="0"]
color = Color(0, 0, 0, 1)

[node name="ScreenEffect" parent="BaseScene" instance=ExtResource("43")]

[node name="Environment" type="Node2D" parent="BaseScene"]

[node name="TopIsland" parent="BaseScene/Environment" instance=ExtResource("26")]
position = Vector2(-4383.13, -8023.57)

[node name="PillarsLoop" parent="BaseScene/Environment" instance=ExtResource("45")]
position = Vector2(-1148.46, -8152.32)
player_node = NodePath("../../Player")
area_shape_node = NodePath("Area3D/Shape3D")
container_node = NodePath("PillarsContainer")

[node name="PillarsContainer" parent="BaseScene/Environment/PillarsLoop" instance=ExtResource("44")]

[node name="Area3D" type="Area2D" parent="BaseScene/Environment/PillarsLoop"]
collision_layer = 0
collision_mask = 0

[node name="Shape3D" type="CollisionShape2D" parent="BaseScene/Environment/PillarsLoop/Area3D"]
position = Vector2(-0.270508, 2326.08)
shape = SubResource("1")

[node name="Maze" type="Node2D" parent="BaseScene/Environment"]
position = Vector2(1117.5, 9761.04)
scale = Vector2(1.1, 1.1)

[node name="RemovableLine" parent="BaseScene/Environment/Maze" instance=ExtResource("4")]
position = Vector2(699.031, -13135.7)
scale = Vector2(3.2, 2)
texture = ExtResource("17")
enable_boss_interaction = false
effect_min = 0.5
description_key = "Description060"
selection_area = NodePath("ColorRect")

[node name="LineBody" parent="BaseScene/Environment/Maze/RemovableLine" index="0"]
position = Vector2(0, 11.021)

[node name="ColorRect" type="ColorRect" parent="BaseScene/Environment/Maze/RemovableLine"]
visible = false
offset_left = -175.0
offset_top = -44.0
offset_right = 173.0
offset_bottom = 40.0

[node name="EntryBlock" parent="BaseScene/Environment/Maze" instance=ExtResource("4")]
position = Vector2(664.825, -9523.03)
scale = Vector2(4.09559, 3.08226)
texture = ExtResource("17")
hide_on_init = true
enable_player_interaction = false
enable_boss_interaction = false
effect_material_on_init = false

[node name="Navigation" type="Node2D" parent="BaseScene/Environment/Maze"]
position = Vector2(-1015.91, -8873.67)
scale = Vector2(0.909091, 0.909091)

[node name="TileMap" type="TileMap" parent="BaseScene/Environment/Maze/Navigation"]
z_index = -3
position = Vector2(855.45, 8840.94)
scale = Vector2(2.2, 2.2)
tile_set = ExtResource("7")
format = 2
layer_0/tile_data = PackedInt32Array(-1310751, 3, 0, -1310750, 3, 0, -1310749, 3, 0, -1310748, 3, 0, -1310747, 3, 0, -1310746, 3, 0, -1310745, 3, 0, -1310744, 3, 0, -1310743, 3, 0, -1310742, 3, 0, -1310741, 3, 0, -1310740, 3, 0, -1310739, 3, 0, -1310738, 3, 0, -1310737, 3, 0, -1310736, 3, 0, -1310735, 3, 0, -1310734, 3, 0, -1310733, 3, 0, -1310732, 3, 0, -1310731, 3, 0, -1310730, 3, 0, -1310729, 3, 0, -1310728, 3, 0, -1310727, 3, 0, -1310726, 3, 0, -1310725, 3, 0, -1310724, 3, 0, -1310723, 3, 0, -1310722, 3, 0, -1310721, 3, 0, -1376256, 1, 0, -1376254, 0, 0, -1376253, 3, 0, -1376252, 3, 0, -1376251, 3, 0, -1376250, 3, 0, -1376249, 3, 0, -1376248, 3, 0, -1376247, 3, 0, -1376246, 3, 0, -1376245, 3, 0, -1376244, 3, 0, -1376243, 3, 0, -1376242, 3, 0, -1376241, 3, 0, -1376240, 3, 0, -1376239, 3, 0, -1376238, 3, 0, -1376237, 3, 0, -1376236, 3, 0, -1310719, 13, 0, -1245183, 13, 0, -1179647, 13, 0, -1179646, 6, 0, -1114112, 6, 0, -1114111, 13, 0, -1114110, 5, 0, -1048576, 5, 0, -1048575, 13, 0, -1048574, 5, 0, -917510, 9, 0, -917509, 3, 0, -917508, 3, 0, -917507, 3, 0, -917506, 3, 0, -917505, 3, 0, -983040, 10, 0, -983039, 13, 0, -983038, 8, 0, -983037, 3, 0, -983036, 3, 0, -983035, 3, 0, -983034, 3, 0, -983033, 3, 0, -983032, 11, 0, -851974, 5, 0, -851973, 13, 0, -851972, 13, 0, -851971, 13, 0, -851970, 13, 0, -851969, 13, 0, -917504, 13, 0, -917503, 13, 0, -917502, 13, 0, -917501, 13, 0, -917500, 13, 0, -917499, 13, 0, -917498, 13, 0, -917497, 13, 0, -917496, 5, 0, -786438, 5, 0, -786437, 13, 0, -786436, 9, 0, -786435, 3, 0, -786434, 11, 0, -786433, 13, 0, -851968, 9, 0, -851967, 3, 0, -851966, 11, 0, -851965, 13, 0, -851964, 9, 0, -851963, 3, 0, -851962, 11, 0, -851961, 13, 0, -851960, 5, 0, -720902, 5, 0, -720901, 13, 0, -720900, 5, 0, -720898, 5, 0, -720897, 13, 0, -786432, 5, 0, -786430, 5, 0, -786429, 13, 0, -786428, 5, 0, -786426, 5, 0, -786425, 13, 0, -786424, 5, 0, -655366, 5, 0, -655365, 13, 0, -655364, 8, 0, -655363, 3, 0, -655362, 10, 0, -655361, 13, 0, -720896, 8, 0, -720895, 3, 0, -720894, 10, 0, -720893, 13, 0, -720892, 8, 0, -720891, 3, 0, -720890, 10, 0, -720889, 13, 0, -720888, 5, 0, -589830, 5, 0, -589829, 13, 0, -589828, 13, 0, -589827, 13, 0, -589826, 13, 0, -589825, 13, 0, -655360, 13, 0, -655359, 13, 0, -655358, 13, 0, -655357, 13, 0, -655356, 13, 0, -655355, 13, 0, -655354, 13, 0, -655353, 13, 0, -655352, 5, 0, -524294, 5, 0, -524293, 13, 0, -524292, 9, 0, -524291, 3, 0, -524290, 11, 0, -524289, 13, 0, -589824, 13, 0, -589823, 13, 0, -589822, 13, 0, -589821, 13, 0, -589820, 9, 0, -589819, 3, 0, -589818, 11, 0, -589817, 13, 0, -589816, 5, 0, -458758, 5, 0, -458757, 13, 0, -458756, 5, 0, -458754, 5, 0, -458753, 13, 0, -524288, 13, 0, -524287, 13, 0, -524286, 13, 0, -524285, 13, 0, -524284, 5, 0, -524282, 5, 0, -524281, 13, 0, -524280, 5, 0, -393222, 5, 0, -393221, 13, 0, -393220, 8, 0, -393219, 3, 0, -393218, 10, 0, -393217, 13, 0, -458752, 6, 0, -458751, 13, 0, -458750, 6, 0, -458749, 13, 0, -458748, 8, 0, -458747, 3, 0, -458746, 10, 0, -458745, 13, 0, -458744, 5, 0, -327686, 5, 0, -327685, 13, 0, -327684, 13, 0, -327683, 13, 0, -327682, 13, 0, -327681, 13, 0, -393216, 5, 0, -393215, 13, 0, -393214, 5, 0, -393213, 13, 0, -393212, 13, 0, -393211, 13, 0, -393210, 13, 0, -393209, 13, 0, -393208, 5, 0, -262150, 8, 0, -262149, 3, 0, -262148, 3, 0, -262147, 3, 0, -262146, 3, 0, -262145, 3, 0, -327680, 15, 0, -327679, 13, 0, -327678, 7, 0, -327677, 3, 0, -327676, 3, 0, -327675, 3, 0, -327674, 3, 0, -327673, 3, 0, -327672, 10, 0, -262144, 5, 0, -262143, 13, 0, -262142, 5, 0, -196608, 5, 0, -196607, 13, 0, -196606, 5, 0, -131072, 5, 0, -131071, 13, 0, -131070, 5, 0, -16, 9, 0, -15, 3, 0, -14, 3, 0, -13, 3, 0, -12, 3, 0, -11, 3, 0, -10, 3, 0, -9, 3, 0, -8, 3, 0, -7, 3, 0, -6, 3, 0, -5, 3, 0, -4, 3, 0, -3, 3, 0, -2, 3, 0, -1, 3, 0, -65536, 10, 0, -65535, 13, 0, -65534, 8, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, -65515, 3, 0, -65514, 3, 0, -65513, 3, 0, -65512, 3, 0, -65511, 3, 0, -65510, 11, 0, 65520, 5, 0, 1, 13, 0, 25, 13, 0, 26, 5, 0, 131056, 5, 0, 65561, 13, 0, 65562, 5, 0, 196592, 5, 0, 131097, 13, 0, 131098, 5, 0, 262128, 5, 0, 196633, 13, 0, 196634, 5, 0, 327664, 5, 0, 262169, 13, 0, 262170, 5, 0, 393200, 5, 0, 327705, 13, 0, 327706, 5, 0, 458736, 5, 0, 393241, 13, 0, 393242, 5, 0, 524272, 5, 0, 458777, 13, 0, 458778, 5, 0, 589808, 5, 0, 524313, 13, 0, 524314, 5, 0, 655344, 5, 0, 589849, 13, 0, 589850, 5, 0, 720880, 5, 0, 655385, 13, 0, 655386, 5, 0, 786416, 5, 0, 720921, 13, 0, 720922, 5, 0, 851952, 5, 0, 786457, 13, 0, 786458, 5, 0, 917488, 5, 0, 851993, 13, 0, 851994, 5, 0, 983024, 5, 0, 917529, 13, 0, 917530, 5, 0, 1048560, 5, 0, 983065, 13, 0, 983066, 5, 0, 1114096, 5, 0, 1048601, 13, 0, 1048602, 5, 0, 1179632, 5, 0, 1114137, 13, 0, 1114138, 5, 0, 1245168, 5, 0, 1179673, 13, 0, 1179674, 5, 0, 1310704, 5, 0, 1245209, 13, 0, 1245210, 5, 0, 1376240, 5, 0, 1376241, 13, 0, 1376242, 13, 0, 1376243, 13, 0, 1376244, 13, 0, 1376245, 13, 0, 1376246, 13, 0, 1376247, 13, 0, 1376248, 13, 0, 1376249, 13, 0, 1376250, 13, 0, 1376251, 13, 0, 1376252, 13, 0, 1376253, 13, 0, 1376254, 13, 0, 1376255, 13, 0, 1310720, 13, 0, 1310721, 13, 0, 1310722, 13, 0, 1310723, 13, 0, 1310724, 13, 0, 1310725, 13, 0, 1310726, 13, 0, 1310727, 13, 0, 1310728, 13, 0, 1310729, 13, 0, 1310730, 13, 0, 1310731, 13, 0, 1310732, 13, 0, 1310733, 13, 0, 1310734, 13, 0, 1310735, 13, 0, 1310736, 13, 0, 1310737, 13, 0, 1310738, 13, 0, 1310739, 13, 0, 1310740, 13, 0, 1310741, 13, 0, 1310742, 13, 0, 1310743, 13, 0, 1310744, 13, 0, 1310745, 13, 0, 1310746, 5, 0, 1441776, 8, 0, 1441777, 3, 0, 1441778, 3, 0, 1441779, 3, 0, 1441780, 3, 0, 1441781, 3, 0, 1441782, 3, 0, 1441783, 3, 0, 1441784, 3, 0, 1441785, 3, 0, 1441786, 3, 0, 1441787, 3, 0, 1441788, 3, 0, 1441789, 3, 0, 1441790, 3, 0, 1441791, 3, 0, 1376256, 3, 0, 1376257, 3, 0, 1376258, 3, 0, 1376259, 3, 0, 1376260, 3, 0, 1376261, 3, 0, 1376262, 3, 0, 1376263, 3, 0, 1376264, 11, 0, 1376266, 9, 0, 1376267, 3, 0, 1376268, 3, 0, 1376269, 3, 0, 1376270, 3, 0, 1376271, 3, 0, 1376272, 3, 0, 1376273, 3, 0, 1376274, 3, 0, 1376275, 3, 0, 1376276, 3, 0, 1376277, 3, 0, 1376278, 3, 0, 1376279, 3, 0, 1376280, 3, 0, 1376281, 3, 0, 1376282, 10, 0, 1441800, 4, 0, 1441802, 4, 0, 1507337, 13, 0)
script = ExtResource("19")
map_top_left = Vector2(-15, 0)
map_bottom_right = Vector2(25, 20)
number_of_islands = Vector2(10, 5)
p_entry = Vector2(4, 0)
p_exit = Vector2(6, 5)

[node name="BlockingLine00" parent="BaseScene/Environment/Maze" instance=ExtResource("4")]
position = Vector2(49.6168, -5338.45)
rotation = 1.5708
scale = Vector2(4, 1.6)
enable_player_interaction = false
effect_duration = 0.33
effect_min = 0.25

[node name="BlockingLine01" parent="BaseScene/Environment/Maze" instance=ExtResource("4")]
position = Vector2(1247.13, -5338.45)
rotation = 1.5708
scale = Vector2(4, 1.6)
enable_player_interaction = false
effect_duration = 0.33
effect_min = 0.25

[node name="BlockingLine02" parent="BaseScene/Environment/Maze" instance=ExtResource("4")]
position = Vector2(659.62, -5930.6)
scale = Vector2(4.05, 1.6)
enable_player_interaction = false
effect_duration = 0.33
effect_min = 0.25

[node name="EndPlatform" parent="BaseScene/Environment" instance=ExtResource("3")]
position = Vector2(7218.43, 29141.3)

[node name="PurpleLight" type="PointLight2D" parent="BaseScene/Environment/EndPlatform"]
visible = false
position = Vector2(-4234.11, 309.738)
rotation = 3.10669
scale = Vector2(4.39088, -3.03738)
color = Color(0.827451, 0.490196, 1, 1)
energy = 1.2
texture = ExtResource("12")

[node name="Graffiti00" type="Sprite2D" parent="BaseScene/Environment/EndPlatform"]
self_modulate = Color(1, 1, 1, 0.529412)
z_index = -3
position = Vector2(-6027.25, 241.813)
rotation = -0.151327
scale = Vector2(0.426411, 0.426411)
texture = ExtResource("15")

[node name="Graffiti01" type="Sprite2D" parent="BaseScene/Environment/EndPlatform"]
self_modulate = Color(1, 1, 1, 0.529412)
z_index = -3
position = Vector2(-5598.04, -65.3438)
rotation = -0.268228
scale = Vector2(0.426411, 0.426411)
texture = ExtResource("15")

[node name="Graffiti02" type="Sprite2D" parent="BaseScene/Environment/EndPlatform"]
self_modulate = Color(1, 1, 1, 0.529412)
z_index = -3
position = Vector2(-4905.92, 105.898)
rotation = 0.271692
scale = Vector2(0.426411, 0.426411)
texture = ExtResource("15")

[node name="Graffiti03" type="Sprite2D" parent="BaseScene/Environment/EndPlatform"]
self_modulate = Color(1, 1, 1, 0.529412)
z_index = -3
position = Vector2(-3378.05, -88)
rotation = -0.268228
scale = Vector2(0.426411, 0.426411)
texture = ExtResource("15")

[node name="MovingEye00" parent="BaseScene/Environment/EndPlatform" instance=ExtResource("6")]
position = Vector2(-4779.07, -968.066)
rotation = -0.261799
scale = Vector2(1.1, 1.1)
player_node = NodePath("../../../Player")

[node name="MovingEye01" parent="BaseScene/Environment/EndPlatform" instance=ExtResource("6")]
position = Vector2(-3742.52, -968.066)
rotation = 0.261799
scale = Vector2(1.1, 1.1)
player_node = NodePath("../../../Player")

[node name="EndTube" parent="BaseScene/Environment/EndPlatform" instance=ExtResource("10")]
z_index = -1
position = Vector2(-4220.84, 4878.43)

[node name="HiddenWalls" type="StaticBody2D" parent="BaseScene/Environment"]
position = Vector2(0, -5316.54)
collision_layer = 15
collision_mask = 15

[node name="FallingLeft00" type="CollisionShape2D" parent="BaseScene/Environment/HiddenWalls"]
position = Vector2(1154.45, 1974.14)
shape = SubResource("2")

[node name="FallingRight00" type="CollisionShape2D" parent="BaseScene/Environment/HiddenWalls"]
position = Vector2(2540.77, 1969.71)
shape = SubResource("2")

[node name="FallingLeft01" type="CollisionShape2D" parent="BaseScene/Environment/HiddenWalls"]
position = Vector2(6380.14, 30112.9)
shape = SubResource("3")

[node name="FallingRight01" type="CollisionShape2D" parent="BaseScene/Environment/HiddenWalls"]
position = Vector2(7862.62, 30114.9)
shape = SubResource("3")

[node name="EndingBottom" type="CollisionShape2D" parent="BaseScene/Environment/HiddenWalls"]
position = Vector2(7194.16, 35218.1)
scale = Vector2(6.05372, 4.22155)
shape = SubResource("4")

[node name="EndingLeft" type="CollisionShape2D" parent="BaseScene/Environment/HiddenWalls"]
position = Vector2(980.618, 33459.5)
shape = SubResource("5")

[node name="EndingRight" type="CollisionShape2D" parent="BaseScene/Environment/HiddenWalls"]
position = Vector2(11477.1, 33459.5)
shape = SubResource("5")

[node name="Trigger" type="Node2D" parent="BaseScene"]
position = Vector2(-59.2305, -5317.28)

[node name="FallingDown" type="Area2D" parent="BaseScene/Trigger"]
position = Vector2(-2743, -2130.46)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape2D" parent="BaseScene/Trigger/FallingDown"]
shape = SubResource("6")

[node name="BeforeGame" type="Area2D" parent="BaseScene/Trigger"]
position = Vector2(1895.4, 1092.23)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape2D" parent="BaseScene/Trigger/BeforeGame"]
position = Vector2(11, 0)
shape = SubResource("7")

[node name="GameBegin" type="Area2D" parent="BaseScene/Trigger"]
position = Vector2(1907.11, 5649.16)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape2D" parent="BaseScene/Trigger/GameBegin"]
shape = SubResource("8")

[node name="GameEnd" type="Area2D" parent="BaseScene/Trigger"]
position = Vector2(49.807, 3190.96)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseScene/Trigger/GameEnd"]
position = Vector2(7130.99, 26172.4)
shape = SubResource("9")

[node name="ExitDoorArea" type="Area2D" parent="BaseScene/Trigger"]
position = Vector2(3028.22, 34742.5)
scale = Vector2(1.1, 1.1)
collision_layer = 15
collision_mask = 15

[node name="CollisionShape3D" type="CollisionShape2D" parent="BaseScene/Trigger/ExitDoorArea"]
shape = SubResource("10")

[node name="PlayerRespawn" type="Node2D" parent="BaseScene/Trigger"]
position = Vector2(1882.89, 5221.12)

[node name="TeleportPlayer" type="Node2D" parent="BaseScene/Trigger"]
position = Vector2(7188.57, 34523.3)

[node name="Sound" type="Node" parent="BaseScene"]

[node name="MainMusic" parent="BaseScene/Sound" instance=ExtResource("11")]
stream = ExtResource("1")

[node name="WindSound" type="AudioStreamPlayer" parent="BaseScene/Sound"]
stream = ExtResource("13")
volume_db = -8.0
pitch_scale = 0.6

[node name="ConnectSound" type="AudioStreamPlayer" parent="BaseScene/Sound"]
stream = ExtResource("2")
volume_db = -10.0

[node name="FallingSound" type="AudioStreamPlayer" parent="BaseScene/Sound"]
stream = ExtResource("39")

[editable path="BaseScene"]
[editable path="BaseScene/CursorDisplay"]
[editable path="BaseScene/BackgroundRect"]
[editable path="BaseScene/Environment/Maze/RemovableLine"]
